Merged various bug fixes from 1.0 branch. Added support for using RDN attributes as primary key.
git-svn-id: http://unused-160-33.aus.redhat.com/svn/penrose-server/trunk@582 04c32f3d-caf7-0310-9fe0-d49f5cee804d